# Graphics

1-cube/: CMakeLists.txt  colorposcube.cpp  colorposcube.h  main.cpp  transferobj.cpp  transferobj.h
2-morph/: CMakeLists.txt  cube.cpp  cube.h  main.cpp  mainwindow.cpp  side.cpp  side.h  strip.cpp  strip.h
2-morph/shaders/: rotate.vsh  to_cilinder.vsh  to_sphere.vsh
3-phong/: CMakeLists.txt  camera.cpp  cube.cpp  main.cpp  mainwindow.ui  settings.h  side.h  strip.cpp
3-phong/shaders/: directional.vsh  point.vsh  spot.vsh
4-fps/: CMakeLists.txt  cube.cpp  cube.h  main.cpp  selectcolor.cpp  settings.cpp  settings.h  side.cpp  vectorselector.h
4-fps/shaders/: directional.vsh  point.vsh
5-fragphong/: CMakeLists.txt  camera.cpp  camera.h  main.cpp  mainwindow.cpp  selectcolor.h  settings.cpp  shaderwrapper.h
5-fragphong/shaders/phong-frag/: frag.fsh  point.vsh
6-texture/: CMakeLists.txt  cube.cpp  cube.h  main.cpp  settings.h  shaderwrapper.cpp  side.cpp  side.h  strip.cpp  strip.h  vectorselector.cpp
6-texture/shaders/: directional.vsh  frag.fsh
6-texture/shaders/phong-vert/: point.vsh
7-mesh/: CMakeLists.txt  main.cpp  meshobjfile.cpp  meshobjfile.h  mtlentry.cpp  mtlentry.h  mtlstorage.cpp  mtlstorage.h  objentry.cpp  objentry.h  objstorage.cpp  objstorage.h  settings.cpp  settings.h
7-mesh/shaders/: directional.vsh
